fix: overflow on chromium

--- a/src/FE/src/app/profiles-page/profiles-page.component.css
+++ b/src/FE/src/app/profiles-page/profiles-page.component.css
@@ -25,7 +25,7 @@
 }
 
 .tableContainer {
-  overflow: scroll;
+  overflow: auto;
   background-color: whitesmoke;
   position: relative;
 }
