--- a/src/FE/src/app/sidemenu/sidemenu.component.css
+++ b/src/FE/src/app/sidemenu/sidemenu.component.css
@@ -30,7 +30,7 @@ img {
   padding-top: 0.5rem;
   gap: 0.5rem;
   flex-grow: 0;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .navButton {
